# zeek-language-server

./: .clippy.toml  .gitignore  .gitlint  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  Cargo.toml  DEBUGGING.md  Makefile  README.emacs.md  README.intellij.md  README.md  build.rs  dist-workspace.toml  pyproject.toml  typos.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: bench.yml  check.yml  publish-vscode-extension.yml  release.yml
benches/: criterion.rs
crates/tree-sitter-stack-graphs-zeek/: Cargo.toml  README.md  package.json
crates/tree-sitter-stack-graphs-zeek/rust/: bin.rs  lib.rs  test.rs
crates/tree-sitter-stack-graphs-zeek/src/: stack-graphs.tsg
crates/tree-sitter-stack-graphs-zeek/test/: global.zeek
crates/tree-sitter-stack-graphs-zeek/test/globals/: different-modules.zeek  same-module-different-file.zeek  simple.zeek
crates/tree-sitter-zeek/: Cargo.toml  build.rs
crates/tree-sitter-zeek/src/: lib.rs
emacs/: README.md
src/: ast.rs  complete.rs  lib.rs  lsp.rs  main.rs  parse.rs  parser.rs  query.rs  resolver.rs  rst.rs  zeek.rs
src/snapshots/: zeek_language_server__ast__test__for_parameters_vec-2.snap  zeek_language_server__ast__test__for_parameters_vec-3.snap  zeek_language_server__ast__test__for_parameters_vec-4.snap  zeek_language_server__ast__test__for_parameters_vec-5.snap  zeek_language_server__ast__test__for_parameters_vec.snap  zeek_language_server__ast__test__loaded_files.snap  zeek_language_server__ast__test__loaded_files_recursive.snap  zeek_language_server__ast__test__loop_vars_set.snap  zeek_language_server__ast__test__loop_vars_set_iteration_order.snap  zeek_language_server__ast__test__loop_vars_set_multiple_types.snap  zeek_language_server__ast__test__loop_vars_set_non_unique_keys.snap  zeek_language_server__ast__test__loop_vars_table-2.snap  zeek_language_server__ast__test__loop_vars_table-7.snap  zeek_language_server__ast__test__loop_vars_vector.snap  zeek_language_server__ast__test__redef_enum-2.snap  zeek_language_server__ast__test__redef_enum.snap  zeek_language_server__ast__test__redef_global_record.snap  zeek_language_server__ast__test__redef_record_same_file-2.snap  zeek_language_server__ast__test__redef_record_same_file-3.snap  zeek_language_server__ast__test__redef_record_same_file-4.snap  zeek_language_server__ast__test__redef_record_same_file.snap  zeek_language_server__ast__test__resolve-2.snap  zeek_language_server__ast__test__resolve-3.snap  zeek_language_server__ast__test__resolve-4.snap  zeek_language_server__ast__test__resolve-5.snap  zeek_language_server__ast__test__resolve-6.snap  zeek_language_server__ast__test__resolve-7.snap  zeek_language_server__ast__test__resolve.snap  zeek_language_server__ast__test__resolve_elsewhere.snap  zeek_language_server__ast__test__resolve_initializer.snap  zeek_language_server__ast__test__resolve_redef.snap  zeek_language_server__ast__test__resolve_ref.snap  zeek_language_server__ast__test__resolve_same_module_elsewhere.snap  zeek_language_server__ast__test__resolve_type-10.snap  zeek_language_server__ast__test__resolve_type-11.snap  zeek_language_server__ast__test__resolve_type-12.snap  zeek_language_server__ast__test__resolve_type-13.snap  zeek_language_server__ast__test__resolve_type-14.snap  zeek_language_server__ast__test__resolve_type-15.snap  zeek_language_server__ast__test__resolve_type-16.snap  (+170 more)
vscode/: .eslintrc.js  .gitignore  .vscodeignore  LICENSE  README.md  jest.config.ts  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode/__mocks__/: vscode.js
vscode/snippets/: sig.json  zeek.json
vscode/src/: extension.test.ts  extension.ts
vscode/syntaxes/: sig.json  zeek.json
