[package]
name = "zeek-language-server"
version = "0.73.2"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/bbannier/zeek-language-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "2.10.1", default-features = false, features = ["async_tokio", "html_reports", "plotters"], package = "codspeed-criterion-compat" }
insta = "1.43.1"
tempfile = "3.20.0"
version-sync = "0.9.5"

[features]
default = []
telemetry = ["opentelemetry", "tracing-opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp"]

[dependencies]
clap = { version = "4.5.45", features = ["std", "derive", "help"], default-features = false }
conv = { version = "0.3.3", default-features = false }
eyre = { default-features = false, version = "0.6.12", features = ["auto-install"] }
futures = { default-features = false, version = "0.3.31" }
itertools = "0.14.0"
line-index = { version = "0.1.2", default-features = false }
opentelemetry = { version = "0.26.0", features = ["trace"], optional = true }
opentelemetry-otlp = { version = "0.26.0", features = ["grpc-tonic", "trace"], default-features = false, optional = true }
opentelemetry-semantic-conventions = { version = "0.30.0", default-features = false }
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio", "trace"], default-features = false, optional = true }
path-clean = "1.0.1"
rayon = "1.11.0"
regex = { default-features = false, version = "1.11.1" }
rust-fuzzy-search = "0.1.1"
rustc-hash = "2.1.1"
salsa = "0.16.1"
serde = { version = "1.0.219", default-features = false }
serde_json = { default-features = false, version = "1.0.143" }
smol_str = { version = "0.3.2", default-features = false, features = ["std"] }
streaming-iterator = { version = "0.1.9", default-features = false }
tokio = { version = "1.47.1", features = ["fs", "io-std", "io-util", "rt-multi-thread", "process", "macros", "sync"], default-features = false }
tower-lsp-server = { version = "0.22.1", features = ["runtime-tokio"], default-features = false }
tracing = { features = ["attributes"], default-features = false, version = "0.1.41" }
tracing-appender = { version = "0.2.3", default-features = false }
tracing-opentelemetry = { version = "0.27.0", optional = true }
tracing-subscriber = { version = "0.3.19", features = ["tracing-log", "registry", "std"], default-features = false }
tree-sitter = "0.25.8"
tree-sitter-bash = "0.25.0"
tree-sitter-btest = { git = "https://github.com/bbannier/tree-sitter-btest", version = "0.1.0" }
tree-sitter-highlight = { version = "0.25.8", default-features = false }
tree-sitter-printf = "0.5.1"
tree-sitter-regex = "0.24.3"
tree-sitter-rst = "0.2.0"
tree-sitter-zeek = { path = "crates/tree-sitter-zeek" }
walkdir = "2.5.0"

[workspace]
members = [".", "crates/tree-sitter-zeek"]

[profile.release]
panic = "abort"
strip = true
codegen-units = 1
lto = "thin"

[profile.profiling]
inherits = "release"
debug = true
strip = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[bench]]
name = "criterion"
harness = false

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
missing_errors_doc = "allow"
ignored_unit_patterns = "deny"
clone_on_ref_ptr = "deny"
redundant_clone = "deny"
