[package]
name = "zeek-language-server"
version = "0.73.4"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/bbannier/zeek-language-server"
rust-version = "1.89"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "4.2.1", default-features = false, features = ["async_tokio", "html_reports", "plotters"], package = "codspeed-criterion-compat" }
insta = "1.46.1"
tempfile = "3.24.0"
version-sync = "0.9.5"

[features]
default = []
telemetry = ["opentelemetry", "tracing-opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp"]

[dependencies]
clap = { workspace = true }
conv = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
line-index = { workspace = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry_sdk = { workspace = true, optional = true }
path-clean = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
rust-fuzzy-search = { workspace = true }
rustc-hash = { workspace = true }
salsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smol_str = { workspace = true }
streaming-iterator = { workspace = true }
tokio = { workspace = true }
tower-lsp-server = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-bash = { workspace = true }
tree-sitter-btest = { workspace = true }
tree-sitter-highlight = { workspace = true }
tree-sitter-printf = { workspace = true }
tree-sitter-regex = { workspace = true }
tree-sitter-rst = { workspace = true }
tree-sitter-zeek = { path = "crates/tree-sitter-zeek" }
ustr = "1.1.0"
walkdir = { workspace = true }

[workspace]
members = [".", "crates/tree-sitter-zeek"]

[workspace.dependencies]
cc = "1.2.55"
clap = { version = "4.5.57", features = ["std", "derive", "help"], default-features = false }
conv = { version = "0.3.3", default-features = false }
eyre = { default-features = false, version = "0.6.12", features = ["auto-install"] }
futures = { default-features = false, version = "0.3.32" }
itertools = "0.14.0"
line-index = { version = "0.1.2", default-features = false }
opentelemetry = { version = "0.26.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.26.0", features = ["grpc-tonic", "trace"], default-features = false }
opentelemetry-semantic-conventions = { version = "0.31.0", default-features = false }
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio", "trace"], default-features = false }
path-clean = "1.0.1"
rayon = "1.11.0"
regex = { default-features = false, version = "1.12.3" }
rust-fuzzy-search = "0.1.1"
rustc-hash = "2.1.1"
salsa = "0.16.1"
serde = { version = "1.0.228", default-features = false }
serde_json = { default-features = false, version = "1.0.149" }
smol_str = { version = "0.3.5", default-features = false, features = ["std"] }
streaming-iterator = { version = "0.1.9", default-features = false }
tokio = { version = "1.49.0", features = ["fs", "io-std", "io-util", "rt-multi-thread", "process", "macros", "sync"], default-features = false }
tower-lsp-server = { version = "0.23.0", features = ["runtime-tokio"], default-features = false }
tracing = { features = ["attributes"], default-features = false, version = "0.1.44" }
tracing-appender = { version = "0.2.4", default-features = false }
tracing-opentelemetry = { version = "0.27.0" }
tracing-subscriber = { version = "0.3.22", features = ["tracing-log", "registry", "std"], default-features = false }
tree-sitter = "0.26.5"
tree-sitter-bash = "0.25.1"
tree-sitter-btest = { git = "https://github.com/bbannier/tree-sitter-btest", version = "0.1.0" }
tree-sitter-generate = "0.26.5"
tree-sitter-highlight = { version = "0.26.5", default-features = false }
tree-sitter-printf = "0.5.1"
tree-sitter-regex = "0.25.0"
tree-sitter-rst = "0.2.0"
walkdir = "2.5.0"

[profile.release]
panic = "abort"
strip = true
codegen-units = 1
lto = "thin"

[profile.profiling]
inherits = "release"
debug = true
strip = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[bench]]
name = "criterion"
harness = false

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
missing_errors_doc = "allow"
ignored_unit_patterns = "deny"
clone_on_ref_ptr = "deny"
redundant_clone = "deny"
