[package]
name = "tree-sitter-zeek"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.24.4"

[build-dependencies]
cc = "1.2.1"
regex = { version = "1.11.1", default-features = false }
tree-sitter = "0.24.4"
tree-sitter-generate = "0.24.4"
