[package]
name = "tree-sitter-zeek"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = { workspace = true }

[build-dependencies]
cc = { workspace = true }
regex = { workspace = true }
tree-sitter-generate = { workspace = true }
